# zephyr-course

./: .gitignore  README.md  west.yml
app/: .clang-format  .clang-tidy  CMakeLists.txt  Kconfig  app.overlay  prj.conf
app/boards/: sam_v71_xult_samv71q21b.overlay
app/scripts/linux/: build.sh  flash.sh  menuconfig_changes.sh
app/scripts/windows/: build.bat  flash.bat
app/src/: main.c  main.cpp
app/subsys/Heartbeat/: Kconfig.Heartbeat  heartbeat.c  heartbeat.h
app/subsys/LED/: Kconfig.LED  led_subsystem.c  led_subsystem.h
